<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".editor.fragments.EditorFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/schedule_fragment_schedule_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editor"
                    style="@style/tittle_bold_text"
                    android:textSize="28sp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/white"
                android:padding="16dp"
                android:elevation="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Текущий курс обучения"
                    style="@style/tittle_medium_text"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"/>

                <EditText
                    android:id="@+id/editor_current_semester_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:minHeight="48dp"
                    android:hint="Номер курса"
                    style="@style/rounded_input"
                    android:background="@drawable/rounded_input"
                    android:layout_gravity="center"
                    android:inputType="number"
                    android:maxEms="1"
                    android:maxLength="1"
                    android:layout_marginTop="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/editor_timetable_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/white"
                android:padding="16dp"
                android:elevation="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Время занятий"
                    style="@style/tittle_medium_text"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/white"
                android:padding="16dp"
                android:elevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/persons"
                        style="@style/tittle_medium_text"
                        android:textSize="18sp"
                        android:layout_marginTop="8dp"/>
                    <ImageButton
                        android:id="@+id/editor_add_person_image_button"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@android:color/transparent"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/add_person"
                        android:src="@drawable/add_teacher"
                        app:tint="@color/blue"/>
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/editor_persons_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/white"
                android:padding="16dp"
                android:elevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/places"
                        style="@style/tittle_medium_text"
                        android:textSize="18sp"
                        android:layout_marginTop="8dp"/>
                    <ImageButton
                        android:id="@+id/editor_add_place_image_button"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@android:color/transparent"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/add_place"
                        android:src="@drawable/add_place"
                        app:tint="@color/blue"/>
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/editor_places_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

            </LinearLayout>

            <Button
                android:id="@+id/editor_clear_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:background="@drawable/rounded_button"
                style="@style/blue_button"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="Очистить расписание"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>